Enhance README with project details and instructions
Added detailed project description, objectives, architecture, technologies, and usage instructions.